--- a/index.css
+++ b/index.css
@@ -471,6 +471,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     padding-left: 0;
+    margin-top: 70px !important;
   }
 
   #custom_left_banner {
@@ -524,7 +525,7 @@
     height: 100vh;
   }
 
-  .admin{
+  .admin {
     padding-left: 20px !important;
     margin-top: 10px;
     font-weight: unset;
