added chat functionality

--- a/index.css
+++ b/index.css
@@ -351,6 +351,7 @@
   position: fixed;
   bottom: 20px;
   right: 2%;
+  cursor: pointer;
 }
 
 #chatBox {
@@ -394,26 +395,55 @@
 .welcome_message {
   padding: 10px 12px;
   border: 1px solid rgba(128, 128, 128, 0.26);
-  font-size: 14px;
+  font-size: 15px;
   border-radius: 20px;
   text-align: left;
-  width: 275px;
+  width: 300px;
 }
 
 .chat-container {
-  height: 77%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 80%;
+}
+
+.custom_chat_mesaage_parent {
+  display: flex;
+  flex-direction: column;
+}
+
+.chat_text {
+  background-color: #f1f3f4;
+  color: #5f6368;
+  font: 400 14px/20px Roboto, Helvetica Neue, sans-serif;
+  letter-spacing: 0.2px;
+  /* width: fit-content; */
+  border-radius: 25px;
+  padding: 10px 15px;
+  min-width: auto;
+  max-width: 70%;
+  word-wrap: break-word;
+  height: fit-content;
+}
+
+.outgoingMessage {
+  align-self: flex-end;
+}
+
+.incomingMessage {
+  align-self: flex-start;
 }
 
 .footer {
-  border-top: 1px solid rgba(128, 128, 128, 0.309);
-  margin-bottom: 0;
-  padding-bottom: 0;
-  height: 275px;
+  /* border-top: 1px solid rgba(128, 128, 128, 0.309); */
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
-.footer-content {
+/* .footer-content {
   height: 50px;
-}
+} */
 
 .chat_footer_text {
   font-size: 10px;
@@ -421,7 +451,7 @@
 }
 
 .goggle_logo_chat_footer {
-  margin-bottom: 11px;
+  margin-bottom: -2px;
   margin-left: 2px;
 }
 
@@ -436,10 +466,16 @@
 .list-custom {
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  line-height: 24px !important;
 }
 
 .list-group a {
   padding: 10px 15px;
+}
+
+.list-group {
+  width: 340px;
+  margin-bottom: 10px;
 }
 
 .chat_textarea {
@@ -453,13 +489,14 @@
 }
 
 .outer_inputbox {
-  height: 50px;
-  border-top: 1px solid rgba(128, 128, 128, 0.387);
-  border-bottom: 1px solid rgba(128, 128, 128, 0.387);
+  height: 42px;
+  border-top: 1px solid rgba(182 182 182 / 39%);
+  border-bottom: 1px solid rgba(182 182 182 / 39%);
 }
 
 .chat_send_logo {
-  margin-right: 15px;
+  margin-right: 12px;
+  width: 20px;
 }
 
 .nav-item a {
@@ -525,10 +562,22 @@
     height: 100vh;
   }
 
+  .welcome_message {
+    width: 330px;
+  }
+
+  .list-group {
+    width: 400px;
+  }
+
   .admin {
     padding-left: 20px !important;
     margin-top: 10px;
     font-weight: unset;
+  }
+
+  #inputMessage {
+    width: 100%;
   }
 }
 
@@ -571,3 +620,20 @@
     padding-left: unset;
   }
 }
+
+/* Three dots */
+
+/* .dot-flashing {
+  background-color: gray !important;
+  color: gray !important;
+}
+
+.dot-flashing::after {
+  background-color: rgb(235, 37, 37) !important;
+  color: gray !important;
+}
+
+.dot-flashing::before {
+  background-color: rgb(234, 120, 120) !important;
+  color: grey !important;
+} */
